--- a/index.html
+++ b/index.html
@@ -13,40 +13,61 @@
       <nav>
         <ul>
           <li><a href="#about">회사소개</a></li>
+          <li><a href="#business">사업영역</a></li>
           <li><a href="#projects">프로젝트</a></li>
           <li><a href="#support">고객지원</a></li>
-          <li><a href="#en">English</a></li>
+          <li><a href="#en">EN</a></li>
           <li><a href="#login">로그인</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <section class="main-banner">
-    <h2>고객의 만족과 이익 창출을 위한 기술 파트너</h2>
-    <p>SC Technology - 세찬기술</p>
+  <section class="hero">
+    <h2>플랜트 엔지니어링 전문기업</h2>
+    <p>고객의 만족과 이익 창출을 위한 기술 파트너, (주)세찬기술</p>
   </section>
 
   <section id="about" class="section">
     <h2>회사소개</h2>
-    <p>2023년 11월 설립된 (주)세찬기술은 바이오, 수 처리, 정유 및 석유화학, 일반 산업 플랜트 분야에 특화된 배관설계 전문 엔지니어링 기업입니다.</p>
-    <p>최고의 설계 및 엔지니어링 서비스를 통해 고객사의 이익 창출과 만족을 실현하고자 끊임없이 노력하고 있습니다.</p>
+    <div class="section-img">
+      <img src="images/image_1.png" alt="회사소개 이미지">
+    </div>
+    <p>(주)세찬기술은 바이오, 수 처리, 정유 및 석유화학, 일반 산업 플랜트 분야의 배관설계를 전문으로 하는 엔지니어링 기업입니다.</p>
+    <p>2023년 11월 설립 이후, 고객사의 경쟁력 강화를 목표로 최고의 설계 품질과 서비스를 제공합니다.</p>
+  </section>
+
+  <section id="business" class="section">
+    <h2>사업영역</h2>
+    <div class="business-grid">
+      <div class="business-item"><img src="images/icon_refinery.png"><h3>정유</h3></div>
+      <div class="business-item"><img src="images/icon_chemical.png"><h3>석유화학</h3></div>
+      <div class="business-item"><img src="images/icon_bio.png"><h3>BIO 플랜트</h3></div>
+      <div class="business-item"><img src="images/icon_water.png"><h3>수 처리</h3></div>
+      <div class="business-item"><img src="images/icon_incinerator.png"><h3>소각시설</h3></div>
+      <div class="business-item"><img src="images/icon_upw.png"><h3>초순수 시스템</h3></div>
+    </div>
   </section>
 
   <section id="projects" class="section">
     <h2>주요 프로젝트</h2>
-    <ul>
-      <li>MTM ISO & Piping Plan 수정 - 삼성바이오로직</li>
-      <li>Russia AGCC PE Project - 대림ENG</li>
-      <li>이차전지 배관설계 - 윤성ENC</li>
-      <li>SKBS/SPG2+ Project - SK바이오사이언스</li>
-      <li>S-Oil Shaheen Project - 현대ENG</li>
-      <li>Merck Project, SATORIUS SSCP Project - CIP 및 WFI 설계</li>
-    </ul>
+    <div class="projects-grid">
+      <div class="project-card"><h3>MTM ISO & Piping Plan 수정</h3><p>삼성바이오로직스</p></div>
+      <div class="project-card"><h3>Russia AGCC PE Project</h3><p>대림ENG</p></div>
+      <div class="project-card"><h3>이차전지 배관설계</h3><p>윤성ENC</p></div>
+      <div class="project-card"><h3>SKBS/SPG2+ Project</h3><p>SK바이오사이언스</p></div>
+      <div class="project-card"><h3>S-Oil Shaheen Project</h3><p>현대엔지니어링</p></div>
+      <div class="project-card"><h3>BNC WFI 모듈 설계</h3><p>BNC Korea</p></div>
+      <div class="project-card"><h3>Merck CIP System 설계</h3><p>Merck</p></div>
+      <div class="project-card"><h3>Sartorius SSCP Project</h3><p>Sartorius</p></div>
+    </div>
   </section>
 
   <section id="support" class="section">
     <h2>고객지원</h2>
+    <div class="section-img">
+      <img src="images/image_11.png" alt="오시는 길 이미지">
+    </div>
     <p>전화: 02-6423-7000~7004</p>
     <p>팩스: 02-6423-7005</p>
     <p>주소: 서울특별시 금천구 가산동 543-1, 대성디폴리스 A동 1711호</p>
