--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="service-item">
         <h4>3D 설계</h4>
         <ul>
-          <li>PDS</li>
+          <li>AP3D</li>
           <li>SP3D</li>
           <li>PDMS</li>
           <li>E3D</li>
@@ -396,6 +396,13 @@
         <td>㈜ KBE</td>
         <td>Sartorius</td>
         <td>AP3D (3D)</td>
+      </tr>
+        <tr>
+        <td>2025.05.01 ~ ING</td>
+        <td>Fadhili Gas Increment Program PKG 4<br><small>(가스 Plant 설계 및 Model)</small></td>
+        <td>㈜ QISO</td>
+        <td>삼성엔지니어링</td>
+        <td>SP3D (3D)</td>
       </tr>
     </tbody>
   </table>
