--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-lg-8 col-xl-6 text-center">
         <h2 class="mt-0">고객 지원</h2>
-        <p class="text-muted mb-5">무엇을 도와 드릴까요?</p>
+        <p class="text-muted mb-5">무엇을 도와 드릴까요?<br>(고객지원 문의는 서비스 준비중이며,<br>현재 어떠한 개인정보도 수집하거나 저장하지 않습니다.)</p>
       </div>
     </div>
     <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
