--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta name="naver-site-verification" content="90ae086bacce9296b6297cc0291082da8990d2a3" />
+        <title>(주)세찬기술</title>
+        <meta name="description" content="세찬기술은 고객과 함께 성장하는 비즈니스 파트너 세찬 기술은 앞선 기술로 항상 고객과 함께 합니다.최상의 설계서비스를 제공하는 세찬기술에서 귀하의 가치를 높혀보세요!">
+    
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
