--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta name="naver-site-verification" content="90ae086bacce9296b6297cc0291082da8990d2a3" />
     <!-- 제목 -->
-    <title>세찬기술 – 고객과 함께 성장하는 설계 파트너</title>
+    <title>세찬기술</title>
 
     <!-- 검색 엔진 설명 -->
     <meta name="description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
 
     <!-- Open Graph (SNS 공유용) -->
-    <meta property="og:title" content="세찬기술 – 고객과 함께 성장하는 설계 파트너">
+    <meta property="og:title" content="세찬기술">
     <meta property="og:description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
     <meta property="og:image" content="https://www.sechantec.co.kr/images/og-image.jpg">
     <meta property="og:url" content="https://www.sechantec.co.kr/">
 
     <!-- Twitter 카드 (선택) -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="세찬기술 – 고객과 함께 성장하는 설계 파트너">
+    <meta name="twitter:title" content="세찬기술">
     <meta name="twitter:description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
     <meta name="twitter:image" content="https://www.sechantec.co.kr/images/og-image.jpg">
    
