--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <div class="carousel-item active">
       <div class="carousel-img" style="background-image:url('assets/img/bg-masthead1.png')">
         <div class="carousel-caption d-flex flex-column h-100 justify-content-center align-items-center text-center">
-          <h1 class="text-white font-weight-bold">
-            <span class="small-line">가치를 고객에게</span><br>
-            세찬 기술
-          </h1>
+        <h1 class="text-white font-weight-bold">
+          <span class="d-block small-line">가치를 고객에게</span>
+          <span class="d-block">세찬 기술</span>
+        </h1>
           <hr class="divider divider-light" />
           <a class="btn btn-primary btn-xl" href="#회사소개">소개</a>
         </div>
@@ -100,10 +100,10 @@
     <div class="carousel-item">
       <div class="carousel-img" style="background-image:url('assets/img/bg-masthead2.png')">
         <div class="carousel-caption d-flex flex-column h-100 justify-content-center align-items-center text-center">
-          <h1 class="text-white font-weight-bold">
-            <span class="small-line">가치를 고객에게</span><br>
-            세찬 기술
-          </h1>
+        <h1 class="text-white font-weight-bold">
+          <span class="d-block small-line">가치를 고객에게</span>
+          <span class="d-block">세찬 기술</span>
+        </h1>
           <hr class="divider divider-light" />
           <a class="btn btn-primary btn-xl" href="#회사소개">소개</a>
         </div>
