--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>SC Technology.co.,Ltd</title>
+        <title>(주)세찬기술</title>
         <meta name="viewport" content="width=1200">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
