--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head>
         <meta name="naver-site-verification" content="90ae086bacce9296b6297cc0291082da8990d2a3" />
     <!-- 제목 -->
-    <title>세찬기술</title>
+    <title>(주)세찬기술</title>
 
     <!-- 검색 엔진 설명 -->
-    <meta name="description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
+    <meta name="description" content="(주)세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
 
     <!-- Open Graph (SNS 공유용) -->
-    <meta property="og:title" content="세찬기술">
-    <meta property="og:description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
+    <meta property="og:title" content="(주)세찬기술">
+    <meta property="og:description" content="(주)세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
     <meta property="og:image" content="https://www.sechantec.co.kr/images/og-image.jpg">
     <meta property="og:url" content="https://www.sechantec.co.kr/">
 
     <!-- Twitter 카드 (선택) -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="세찬기술">
-    <meta name="twitter:description" content="세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
+    <meta name="twitter:title" content="(주)세찬기술">
+    <meta name="twitter:description" content="(주)세찬기술은 최고의 설계 서비스로 고객 가치를 함께 높여가는 파트너입니다.">
     <meta name="twitter:image" content="https://www.sechantec.co.kr/images/og-image.jpg">
    
         <meta charset="utf-8" />
@@ -56,7 +56,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top">
-            <img src="assets/img/brand-logo.PNG" alt="브랜드 로고" style="height: 2.4rem; vertical-align: middle; margin-right: 0.6rem;">세찬기술
+            <img src="assets/img/brand-logo.PNG" alt="브랜드 로고" style="height: 2.4rem; vertical-align: middle; margin-right: 0.6rem;">(주)세찬기술
                 </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
