--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top">
-            <img src="assets/img/brand-logo.PNG" alt="브랜드 로고" style="height: 2.4rem; vertical-align: middle; margin-right: 0.6rem;">㈜세찬기술
+            <img src="assets/img/brand-logo.PNG" alt="브랜드 로고" style="height: 2.4rem; vertical-align: middle; margin-right: 0.6rem;">세찬기술
                 </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
