--- a/index.html
+++ b/index.html
@@ -422,6 +422,20 @@
         <td>삼성 E&A</td>
         <td>SP3D (3D)</td>
       </tr>
+        <tr>
+        <td><br>2025.06.01 ~ </td>
+        <td>PW GENERATION, STORAGE AND<br>DISTRIBUTION SYSTEM<br><small>(수처리 설계 및 3D Model)</small></td>
+        <td><br>㈜ 성경유나이트</td>
+        <td><br>동국제약</td>
+        <td><br>AP3D (3D)</td>
+      </tr>
+        <tr>
+        <td>2025.08.01 ~ </td>
+        <td>SK 바이오사이언스 Global R&PD Center<br><small>(증설 설계)</small></td>
+        <td>삼우설계</td>
+        <td>SK 바이오사이언스</td>
+        <td>AUTOCAD (2D)</td>
+      </tr>
     </tbody>
   </table>
   </div>
