--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
       </tr>
         <tr>
         <td>2025.08.01 ~ </td>
-        <td>SK 바이오사이언스 Global R&PD Center<br><small>(증설 설계)</small></td>
-        <td>삼우설계</td>
+        <td>SK 바이오사이언스 Global R&PD Center<br><small>(Conjugate Vaccine Pilot Plant 설계)</small></td>
+        <td>㈜ 삼우종합건축사무소</td>
         <td>SK 바이오사이언스</td>
         <td>AUTOCAD (2D)</td>
       </tr>
