--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <td>MTM ISO &amp; Piping Plan 수정<br><small>(Module 2D Plan)</small></td>
         <td>㈜ KBE</td>
         <td>삼성 바이오로직스</td>
-        <td>Auto Cad</td>
+        <td>AutoCad (2D)</td>
       </tr>
       <tr>
         <td>2023.11.01 ~ 2025.04.31</td>
@@ -434,7 +434,7 @@
         <td>SK 바이오사이언스 Global R&PD Center<br><small>(Conjugate Vaccine Pilot Plant 설계)</small></td>
         <td>㈜ 삼우종합건축사무소</td>
         <td>SK 바이오사이언스</td>
-        <td>AUTOCAD (2D)</td>
+        <td>AutoCad (2D)</td>
       </tr>
     </tbody>
   </table>
@@ -507,7 +507,7 @@
       세찬기술 방문을 원하시면 아래 지도를 참고해 주세요.
     </p>
     <div class="map-wrap mb-4" style="width:100%;max-width:1000px;margin:0 auto;">
-      <!-- 네이버 지도 퍼가기 embed 코드 (예시, 실제 src로 교체하세요) -->
+      <!-- 구글 지도 퍼가기 embed 코드 (예시, 실제 src로 교체하세요) -->
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.194047751751!2d126.87447337657711!3d37.47974697206122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b61fcec602951%3A0x3030ea201d2c48ef!2z7ISc7Jq47Yq567OE7IucIOq4iOyynOq1rCDqsIDsgrDrj5kgNTQzLTE!5e0!3m2!1sko!2skr!4v1752555806978!5m2!1sko!2skr"
         width="100%" 
@@ -519,13 +519,13 @@
     </div>
     <div class="text-center">
       <strong>주소:</strong> 서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>
-      <strong>대표번호:</strong> 02-6423-7000 ~ 7004
+      <strong>대표번호:</strong> 02-6423-7000 ~ 7004 / <strong>메일:</strong>sechantec@sechantec.co.kr
     </div>
   </div>
 </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>Copyright &copy; 2023 - SC Technology.co.,Ltd  All rights reserved.</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>02-6423-7000 ~ 7004 / sechantec@sechantec.co.kr<br>Copyright &copy; 2023 - SC Technology.co.,Ltd  All rights reserved.</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
