--- a/index.html
+++ b/index.html
@@ -508,8 +508,7 @@
     </p>
     <div class="map-wrap mb-4" style="width:100%;max-width:1000px;margin:0 auto;">
       <!-- 구글 지도 퍼가기 embed 코드 (예시, 실제 src로 교체하세요) -->
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.194047751751!2d126.87447337657711!3d37.47974697206122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b61fcec602951%3A0x3030ea201d2c48ef!2z7ISc7Jq47Yq567OE7IucIOq4iOyynOq1rCDqsIDsgrDrj5kgNTQzLTE!5e0!3m2!1sko!2skr!4v1752555806978!5m2!1sko!2skr"
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.1969478045708!2d126.87436657626674!3d37.479678529103346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b0349d2a7f95603%3A0x76554ba974043b07!2z7IS47LCs6riw7Iig!5e0!3m2!1sko!2skr!4v1755845384756!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
         width="100%" 
         height="540"
         style="border:0; border-radius:14px;"
