--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="carousel-img" style="background-image:url('assets/img/bg-masthead1.png')">
         <div class="carousel-caption d-flex flex-column h-100 justify-content-center align-items-center text-center">
         <h1 class="text-white font-weight-bold" style="line-height: 1.4;">
-          <span class="d-block small-line mb-2">가치를 고객에게</span>
+          <span class="d-block small-line mb-2">고객의 가치를 높이는 기술</span>
           <span class="d-block">세찬 기술</span>
           </h1>
           <hr class="divider divider-light" />
