--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div class="vision-main-vertical"></div>
     <!-- 2. 설명 박스 -->
     <div class="vision-desc">
-      세찬 기술은<br>
+      <strong>세찬 기술</strong>은<br>
       고객이 원하는 서비스를 이해하고 함께 만들어 갈 줄 아는<br>
       각 분야의 전문적인 지식을 보유하고 있습니다.
     </div>
@@ -248,13 +248,13 @@
       <div class="service-item">
         <h4>3D 설계</h4>
         <ul>
-          <li>AP3D</li>
           <li>SP3D</li>
-          <li>PDMS</li>
+          <li>AP3D</li>
           <li>E3D</li>
+          <li>PDMS</li>
+          <li>PDS</li>
           <li>NAVISWORKS</li>
-          <li>SMART</li>
-          <li>PLANT REVIEW</li>
+          <li>SMART PLANT REVIEW</li>
         </ul>
       </div>
     </div>
@@ -355,7 +355,7 @@
         <th>PROJECT</th>
         <th>사업주</th>
         <th>원청사</th>
-        <th>3D CAD</th>
+        <th>S/W</th>
       </tr>
     </thead>
     <tbody>
@@ -494,7 +494,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-4 text-center mb-5 mb-lg-0">
                         <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>(02) 6423-7000 ~ 4 / sechantec@sechantec.co.kr</div>
+                        <div>Tel.02-6423-7000 ~ 7004 / E-mail.sechantec@sechantec.co.kr</div>
                     </div>
                 </div>
             </div>
@@ -513,11 +513,7 @@
         width="100%" height="540" style="border:0; border-radius:14px;" allowfullscreen loading="lazy">
       </iframe>
     </div>
-    <div class="text-center">
-      <strong>주소:</strong> 서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>
-      <strong>대표번호:</strong> 02-6423-7000 ~ 7004 / <strong>메일:</strong>sechantec@sechantec.co.kr
     </div>
-  </div>
 </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
