--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>02-6423-7000 ~ 7004 / sechantec@sechantec.co.kr<br>Copyright &copy; 2023 - SC Technology.co.,Ltd  All rights reserved.</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>Tel.02-6423-7000 ~ 7004, Fax.02-6423-7005 / E-mail.sechantec@sechantec.co.kr<br>Copyright &copy; 2023 - SC Technology.co.,Ltd  All rights reserved.</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
