--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="carousel-img" style="background-image:url('assets/img/bg-masthead2.png')">
         <div class="carousel-caption d-flex flex-column h-100 justify-content-center align-items-center text-center">
         <h2 class="text-white font-weight-bold" style="line-height: 1.4;">
-          <span class="d-block small-line mb-2">플랜트·배관 3D 설계 전문 회사</span>
+          <span class="d-block small-line mb-2">플랜트·배관설계 전문 회사</span>
           <span class="d-block">세찬 기술</span>
           </h2>
           <hr class="divider divider-light" />
