--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-4 text-center mb-5 mb-lg-0">
                         <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>Tel.02-6423-7000 ~ 7004 / E-mail.sechantec@sechantec.co.kr</div>
+                        <div><strong>Tel.</strong>02-6423-7000 ~ 7004 / <strong>E-mail.</strong>sechantec@sechantec.co.kr</div>
                     </div>
                 </div>
             </div>
