--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="naver-site-verification" content="90ae086bacce9296b6297cc0291082da8990d2a3" />
+        <meta name="robots" content="noindex, nofollow">
     <!-- 제목 -->
     <title>㈜세찬기술</title>
 
