--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -5,6 +5,7 @@
   <title>세찬기술 – 이념</title>
   <meta name="description" content="세찬기술의 핵심 가치와 철학, 기업 이념 소개">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, follow">
   <link href="/assets/main.css" rel="stylesheet">
 </head>
 <body>
@@ -32,5 +33,6 @@
         </footer>
 </body>
 </html>
+
 
 
