--- a/company/index.html
+++ b/company/index.html
@@ -5,6 +5,7 @@
   <title>세찬기술 – 회사소개</title>
   <meta name="description" content="세찬기술 회사소개: 연혁, 핵심 인력, 주요 가치">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, follow">
   <link href="/assets/main.css" rel="stylesheet">
 </head>
 <body>
@@ -30,5 +31,6 @@
         </footer>
 </body>
 </html>
+
 
 
