--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         <!-- 👇 안내문 (처음엔 안 보임) -->
         <div id="formNotice" class="alert alert-warning text-center" style="display:none; margin-top:40px;">
           <h3>서비스 준비중입니다.</h3>
-          <p>고객지원 문의는 대표 전화 또는 이메일로 연락 부탁드립니다.</p>
+          <p>고객지원 문의는 대표 전화 또는 이메일로 연락 부탁드립니다.<br>감사합니다.</p>
         </div>
       </div>
     </div>
