--- a/about-location.html
+++ b/about-location.html
@@ -57,13 +57,14 @@
       <div class="location-wrapper">
         <div class="location-text">
           <h2 class="section-title">주소</h2>
-          <p>서울 금천구 서부샛길 606, 대성디폴리스 지식산업센터 A동 17층 1711-1호</p><br><br><br>
+          <p>서울 금천구 서부샛길 606, 대성디폴리스 지식산업센터 A동 17층 1711-1호<br>
+             서울 금천구 가산동543-1</p><br><br><br>
 
           <h2 class="section-title">교통편</h2>
           <ul>
             <li>지하철 7호선 구로디지털단지역 8번 출구 도보 10분</li>
             <li>버스 5012번, 5528번 탑승 후 디지털3단지·가산비즈니스센터 하차</li>
-            <li>자가용: 네비게이션에 "㈜세찬기술" 검색</li>
+            <li>자가용: 구글, 네이버에 ㈜세찬기술 검색</li>
           </ul>
         </div>
 
@@ -83,3 +84,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
