--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
             <h2 class="news-title">
               <a href="#">웹사이트 리뉴얼 안내</a>
             </h2>
-            <p class="news-excerpt">세찬기술 공식 홈페이지가 새롭게 리뉴얼 되었습니다. 더욱 편리해진 메뉴 구성과 개선된 사용성을 확인해보세요.</p>
+            <p class="news-excerpt">세찬기술 공식 홈페이지가 새롭게 리뉴얼 되었습니다.<br>더욱 편리해진 메뉴 구성과 개선된 사용성을 확인해보세요.</p>
           </li>
 
           <!-- 아이템 2 -->
@@ -88,7 +88,7 @@
             <h2 class="news-title">
               <a href="#">신규 프로젝트 착수</a>
             </h2>
-            <p class="news-excerpt">반도체·바이오 등 주요 플랜트 분야의 신규 과제를 착수했습니다. 안정적인 품질과 일정으로 결과를 제공하겠습니다.</p>
+            <p class="news-excerpt">반도체·바이오 등 주요 플랜트 분야의 신규 과제를 착수했습니다.<br>안정적인 품질과 일정으로 결과를 제공하겠습니다.</p>
           </li>
         </ul>
       </div>
@@ -99,3 +99,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
