--- a/news.html
+++ b/news.html
@@ -70,29 +70,25 @@
           <!-- 아이템 1 -->
           <li class="news-item">
             <div class="news-top">
-              <span class="news-date">2025-08-12</span>
+              <span class="news-date">2025-09-24</span>
               <span class="news-badge">공지</span>
             </div>
             <h2 class="news-title">
               <a href="#">웹사이트 리뉴얼 안내</a>
             </h2>
-            <p class="news-excerpt">세찬기술 공식 홈페이지가 새롭게 리뉴얼 되었습니다.
-              <span class="br-mobile"><br></span>
-              더욱 편리해진 메뉴 구성과 개선된 사용성을 확인해보세요.</p>
+            <p class="news-excerpt">㈜세찬기술 공식 홈페이지가 새롭게 리뉴얼 되었습니다.<br>더욱 편리해진 메뉴 구성과 개선된 사용성을 확인해보세요.</p>
           </li>
 
           <!-- 아이템 2 -->
           <li class="news-item">
             <div class="news-top">
-              <span class="news-date">2024-11-05</span>
-              <span class="news-badge">프로젝트</span>
+              <span class="news-date">2023-11-27</span>
+              <span class="news-badge">개업</span>
             </div>
             <h2 class="news-title">
-              <a href="#">신규 프로젝트 착수</a>
+              <a href="#">㈜세찬기술 설립</a>
             </h2>
-            <p class="news-excerpt">반도체·바이오 등 주요 플랜트 분야의 신규 과제를 착수했습니다.
-              <span class="br-mobile"><br></span>
-              안정적인 품질과 일정으로 결과를 제공하겠습니다.</p>
+            <p class="news-excerpt">㈜세찬기술이 플랜트 배관 설계 전문 기업으로 출범했습니다.<br>축적된 경험과 전문성을 기반으로 최적의 엔지니어링 서비스를 제공하겠습니다.</p>
           </li>
         </ul>
       </div>
@@ -103,5 +99,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
