--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="caption">
             <h2>정확한 설계, 신뢰의 가치</h2>
             <p>플랜트 배관 전문기업 ㈜세찬기술</p>
-            <p>축적된 경험과 최신 기술을 통한 최적 설계 솔루션 제공</p>
+            <p class="tight-text">축적된 경험과 최신 기술을 통한 최적 설계 솔루션 제공</p>
           </div>
         </div>
         <!-- Slide 2 -->
@@ -120,3 +120,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
