--- a/about.html
+++ b/about.html
@@ -29,18 +29,19 @@
       <div>
 <p>
   <span class="company-name">㈜세찬기술</span>은<br>
-  플랜트 배관 설계 분야에서 축적된 경험과 전문성을 바탕으로<br>
-  고객의 비전을 실현하는 최적의 엔지니어링 솔루션을 제공합니다.<br>
+  플랜트 배관 설계 분야에서 축적된 경험과 전문성을<br>
+  바탕으로 고객의 비전을 실현하는 최적의 엔지니어링<br>
+  솔루션을 제공합니다.<br>
   우리는 설계의 정밀성과 효율성을 동시에 추구하며,<br>
-  프로젝트의 초기 기획부터 상세 설계<br>
-  전 과정에 걸쳐 신뢰할 수 있는 파트너로 함께합니다.<br><br>
+  프로젝트의 초기 기획부터 상세 설계 전 과정에<br>
+  걸쳐 신뢰할 수 있는 파트너로 함께합니다.<br><br><br>
 
   세찬기술은 급변하는 산업 환경 속에서도<br>
   바이오, 석유화학, 발전, 반도체 등 다양한 분야의<br>
   복잡한 과제를 수행하며 기술력을 입증해 왔습니다.<br>
-  이를 통해 고객 맞춤형 설계와 품질 보증 체계를 확립하였으며,<br>
-  프로젝트 리스크를 최소화하고 효율적인 일정 관리로<br>
-  최상의 결과를 제공하고 있습니다.<br><br>
+  이를 통해 고객 맞춤형 설계와 품질 보증 체계를<br>
+  확립하였으며, 프로젝트 리스크를 최소화하고<br>
+  효율적인 일정 관리로 최상의 결과를 제공하고 있습니다.<br><br><br>
 
   앞으로도 <strong>지속적인 혁신</strong>과 <strong>전문 인력 양성</strong>을 통해<br>
   고객 가치 창출에 기여하고, 글로벌 시장에서도 인정받는<br>
@@ -57,3 +58,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
