--- a/about.html
+++ b/about.html
@@ -40,12 +40,12 @@
   바이오, 석유화학, 발전, 반도체 등 다양한 분야의<br>
   복잡한 과제를 수행하며 기술력을 입증해 왔습니다.<br>
   이를 통해 고객 맞춤형 설계와 품질 보증 체계를<br>
-  확립하였으며, 프로젝트 리스크를 최소화하고<br>
-  효율적인 일정 관리로 최상의 결과를 제공하고 있습니다.<br><br><br>
+  확립하였으며, 프로젝트 리스크를 최소화하고 효율적인<br>
+  일정 관리로 최상의 결과를 제공하고 있습니다.<br><br><br>
 
   앞으로도 <strong>지속적인 혁신</strong>과 <strong>전문 인력 양성</strong>을 통해<br>
-  고객 가치 창출에 기여하고, 글로벌 시장에서도 인정받는<br>
-  <strong>엔지니어링 파트너</strong>로 성장해 나가겠습니다.
+  고객 가치 창출에 기여하고, 글로벌 시장에서도<br>
+  인정받는 <strong>엔지니어링 파트너</strong>로 성장해 나가겠습니다.
 </p>
 
       </div>
@@ -58,4 +58,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
