--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
   바탕으로 고객의 비전을 실현하는 최적의 엔지니어링<br>
   솔루션을 제공합니다.<br>
   우리는 설계의 정밀성과 효율성을 동시에 추구하며,<br>
-  프로젝트의 초기 기획부터 상세 설계 전 과정에<br>
-  걸쳐 신뢰할 수 있는 파트너로 함께합니다.<br><br><br>
+  프로젝트의 초기 기획부터 상세 설계 전 과정에 걸쳐<br>
+  신뢰할 수 있는 파트너로 함께합니다.<br><br><br>
 
   세찬기술은 급변하는 산업 환경 속에서도<br>
   바이오, 석유화학, 발전, 반도체 등 다양한 분야의<br>
@@ -58,5 +58,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
