--- a/about-history.html
+++ b/about-history.html
@@ -120,7 +120,9 @@
           <span class="dot"></span>
         <div class="meta">2025.08 ~ (진행)</div>
         <div class="card">
-          <h4>SK 바이오사이언스 Global R&PD Center</h4>
+          <h4>SK 바이오사이언스
+            <span class="br-mobile"><br></span>
+            Global R&PD Center</h4>
           <p>Conjugate Vaccine Pilot Plant 설계</p>
           <div class="tags">㈜삼우 종합건축사무소 / SK 바이오사이언스</div>
         </div>
@@ -130,7 +132,9 @@
         <span class="dot"></span>
         <div class="meta">2025.06 ~ (진행)</div>
         <div class="card">
-          <h4>PW GENERATION, STORAGE & DISTRIBUTION SYSTEM</h4>
+          <h4>PW GENERATION,
+            <span class="br-mobile"><br></span>
+            STORAGE & DISTRIBUTION SYSTEM</h4>
           <p>수처리 설계 및 3D Model</p>
           <div class="tags">㈜성경 유나이트 / 동국제약</div>
         </div>
@@ -140,7 +144,9 @@
         <span class="dot"></span>
         <div class="meta">2025.05 ~ (진행)</div>
         <div class="card">
-          <h4>Fadhili Gas Increment Program PKG 4</h4>
+          <h4>Fadhili Gas Increment
+            <span class="br-mobile"><br></span>
+            Program PKG 4</h4>
           <p>가스 Plant 설계 및 Model</p>
           <div class="tags">㈜QISO / 삼성 E&A</div>
         </div>
@@ -239,3 +245,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
