--- a/about-partners.html
+++ b/about-partners.html
@@ -73,9 +73,9 @@
       <p>
         <strong>세찬기술</strong>strong>은 <strong>KBE</strong>, <strong>3H</strong>, <strong>PLANT LINK</strong>와
         <span class="br-mobile"><br></span>
-        같은 주요 협력사들과 긴밀한 협력을 통해 플랜트 산업의
+        같은 주요 협력사들과 긴밀한 협력을 통해
         <span class="br-mobile"><br></span>
-        혁신과 성장을 함께 만들어가고 있습니다.
+        플랜트 산업의 혁신과 성장을 함께 만들어가고 있습니다.
       </p>
     </section>
 
@@ -97,4 +97,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
