--- a/about-partners.html
+++ b/about-partners.html
@@ -75,7 +75,9 @@
         <span class="br-mobile"><br></span>
         같은 주요 협력사들과 긴밀한 협력을 통해
         <span class="br-mobile"><br></span>
-        플랜트 산업의 혁신과 성장을 함께 만들어가고 있습니다.
+        플랜트 산업의 혁신과 성장을 함께
+        <span class="br-mobile"><br></span>
+        만들어가고 있습니다.
       </p>
     </section>
 
@@ -97,5 +99,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
