--- a/about-partners.html
+++ b/about-partners.html
@@ -71,7 +71,7 @@
     <!-- 소개 -->
     <section class="partners-intro">
       <p>
-        <strong>세찬기술</strong>strong>은 <strong>KBE</strong>, <strong>3H</strong>, <strong>PLANT LINK</strong>와
+        <strong>세찬기술</strong>은 <strong>KBE</strong>, <strong>3H</strong>, <strong>PLANT LINK</strong>와
         <span class="br-mobile"><br></span>
         같은 주요 협력사들과 긴밀한 협력을 통해
         <span class="br-mobile"><br></span>
@@ -99,6 +99,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
