--- a/about-partners.html
+++ b/about-partners.html
@@ -64,14 +64,14 @@
     <section class="page-hero">
       <div class="overlay">
         <h1>파트너</h1>
-        <p>세찬기술과 함께 성장하는 주요 협력사</p>
+        <p>㈜세찬기술과 함께 성장하는 주요 협력사</p>
       </div>
     </section>
 
     <!-- 소개 -->
     <section class="partners-intro">
       <p>
-        <strong>세찬기술</strong>은 <strong>KBE</strong>, <strong>3H</strong>, <strong>PLANT LINK</strong>와
+        <strong>㈜세찬기술</strong>은 <strong>KBE</strong>, <strong>3H</strong>, <strong>PLANT LINK</strong>와
         <span class="br-mobile"><br></span>
         같은 주요 협력사들과 긴밀한 협력을 통해
         <span class="br-mobile"><br></span>
@@ -99,6 +99,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
