--- a/about-location.html
+++ b/about-location.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>오시는길 | ㈜세찬기술</title>
-  <meta name="description" content="세찬기술 오시는길" />
+  <meta name="description" content="㈜세찬기술 오시는길" />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-location.html" />
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="/assets/site.css" />
@@ -64,7 +64,7 @@
           <ul>
             <li>지하철 7호선 구로디지털단지역 8번 출구 도보 10분</li>
             <li>버스 5012번, 5528번 탑승 후 디지털3단지·가산비즈니스센터 하차</li>
-            <li>자가용: 구글, 네이버에 ㈜세찬기술 검색</li>
+            <li>자가용: 구글, 네이버에 세찬기술 검색</li>
           </ul>
         </div>
 
@@ -84,4 +84,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
