--- a/about-ideology.html
+++ b/about-ideology.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>이념 | ㈜세찬기술</title>
-  <meta name="description" content="세찬기술 경영이념" />
+  <meta name="description" content="㈜세찬기술 경영이념" />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-ideology.html" />
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="/assets/site.css" />
@@ -60,3 +60,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
