--- a/about-history.html
+++ b/about-history.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>연혁 | ㈜세찬기술</title>
-  <meta name="description" content="세찬기술 회사연혁 및 프로젝트 발자취" />
+  <meta name="description" content="㈜세찬기술 회사연혁 및 프로젝트 발자취" />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-history.html" />
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="/assets/site.css" />
@@ -94,7 +94,7 @@
     <section class="page-hero">
       <div>
         <h1>연혁</h1>
-        <p>세찬기술의 발자취와 프로젝트 이정표</p>
+        <p>㈜세찬기술의 발자취와 프로젝트 이정표</p>
       </div>
     </section>
 
@@ -245,4 +245,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
