--- a/news.html
+++ b/news.html
@@ -59,7 +59,7 @@
     <section class="page-hero">
       <div>
         <h1>공지</h1>
-        <p>세찬기술의 최신 소식을 전해드립니다</p>
+        <p>㈜세찬기술의 최신 소식을 전해드립니다</p>
       </div>
     </section>
 
@@ -99,6 +99,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
