--- a/product.html
+++ b/product.html
@@ -90,7 +90,7 @@
     <section class="page-hero">
       <div>
         <h1>PRODUCT</h1>
-        <p>세찬기술의 제품과 성과를 소개합니다</p>
+        <p>㈜세찬기술의 제품과 성과를 소개합니다</p>
       </div>
     </section>
 
@@ -136,3 +136,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
