--- a/about-location.html
+++ b/about-location.html
@@ -60,7 +60,7 @@
           <p>서울 금천구 서부샛길 606,
             <span class="br-mobile"><br></span>
             대성디폴리스 지식산업센터 A동 17층 1711-1호<br>
-            서울 금천구 가산동543-1</p><br><br><br>
+            서울 금천구 가산동543-1</p><br><br>
 
           <h2 class="section-title">교통편</h2>
           <ul>
@@ -90,6 +90,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
