--- a/about-location.html
+++ b/about-location.html
@@ -64,13 +64,13 @@
 
           <h2 class="section-title">교통편</h2>
           <ul>
-            <li>지하철 7호선 구로디지털단지역
+            <p>지하철 7호선 구로디지털단지역
               <span class="br-mobile"><br></span>
-              8번 출구 도보 10분</li><br>
-            <li>버스 5012번, 5528번 탑승 후
+              8번 출구 도보 10분</p><br>
+            <p>버스 5012번, 5528번 탑승 후
               <span class="br-mobile"><br></span>
-              디지털3단지·가산비즈니스센터 하차</li><br>
-            <li>자가용: 구글, 네이버에 세찬기술 검색</li>
+              디지털3단지·가산비즈니스센터 하차</p><br>
+            <p>자가용: 구글, 네이버에 세찬기술 검색</p>
           </ul>
         </div>
 
@@ -90,6 +90,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
