--- a/about-location.html
+++ b/about-location.html
@@ -52,27 +52,35 @@
       </div>
     </section>
 
-    <!-- 위치 콘텐츠 -->
-    <section class="page-content">
-      <div class="location-wrapper">
-        <div class="location-text">
-          <h2 class="section-title">주소</h2>
-          <p>서울 금천구 서부샛길 606,
-            <span class="br-mobile"><br></span>
-            대성디폴리스 지식산업센터 A동 17층 1711-1호</p><br>
-            <p>서울 금천구 가산동543-1</p><br><br>
+<!-- 위치 콘텐츠 -->
+<section class="page-content">
+  <div class="location-wrapper">
+    <div class="location-text">
+      <h2 class="section-title">주소</h2>
+      <p>
+        서울 금천구 서부샛길 606,
+        <span class="br-mobile"><br></span>
+        대성디폴리스 지식산업센터 A동 17층 1711-1호
+      </p>
+      <p>서울 금천구 가산동543-1</p>
 
-          <h2 class="section-title">교통편</h2>
-          <ul>
-            <p>지하철 7호선 구로디지털단지역
-              <span class="br-mobile"><br></span>
-              8번 출구 도보 10분</p><br>
-            <p>버스 5012번, 5528번 탑승 후
-              <span class="br-mobile"><br></span>
-              디지털3단지·가산비즈니스센터 하차</p><br>
-            <p>자가용: 구글, 네이버에 세찬기술 검색</p>
-          </ul>
-        </div>
+      <h2 class="section-title">교통편</h2>
+      <ul>
+        <li>
+          지하철 7호선 구로디지털단지역
+          <span class="br-mobile"><br></span>
+          8번 출구 도보 10분
+        </li>
+        <li>
+          버스 5012번, 5528번 탑승 후
+          <span class="br-mobile"><br></span>
+          디지털3단지·가산비즈니스센터 하차
+        </li>
+        <li>자가용: 구글, 네이버에 "세찬기술" 검색</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
         <div class="location-map">
           <!-- 구글 지도 Embed -->
@@ -90,6 +98,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
