--- a/about-partners.html
+++ b/about-partners.html
@@ -17,6 +17,15 @@
       line-height: 1.6;
       color: #444;
     }
+    .br-mobile {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      .br-mobile {
+        display: inline;
+      }
+    }
+
     .partners-grid {
       max-width: var(--maxw);
       margin: 0 auto 80px;
