--- a/about-history.html
+++ b/about-history.html
@@ -156,9 +156,9 @@
         <span class="dot"></span>
         <div class="meta">2024.12 ~ 2025.03</div>
         <div class="card">
-          <h4>Merck Project</h4>
-          <p>CIP System 3D 설계</p>
-          <div class="tags">㈜ KBE / Merck</div>
+          <h4>SARTORIUS SSCP Project</h4>
+          <p>WFI Distribution Module 설계</p>
+          <div class="tags">㈜ KBE / Sartorius</div>
         </div>
       </article>
 
@@ -166,9 +166,9 @@
         <span class="dot"></span>
         <div class="meta">2024.12 ~ 2025.03</div>
         <div class="card">
-          <h4>SARTORIUS SSCP Project</h4>
-          <p>WFI Distribution Module 설계</p>
-          <div class="tags">㈜ KBE / Sartorius</div>
+          <h4>Merck Project</h4>
+          <p>CIP System 3D 설계</p>
+          <div class="tags">㈜ KBE / Merck</div>
         </div>
       </article>
     </section>
@@ -223,8 +223,8 @@
         <div class="meta">2023.11 ~ 2025.04</div>
         <div class="card">
           <h4>Russia AGCC PE Project</h4>
-          <p>화공 플랜트 설계 및 모델</p>
-          <div class="tags">대림 ENG. / 3H 플랜트 엔지니어링</div>
+          <p>화공 Plant 설계 및 Model</p>
+          <div class="tags">3H 플랜트 엔지니어링 / 대림 ENG.</div>
         </div>
       </article>
 
@@ -245,6 +245,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
