--- a/about-history.html
+++ b/about-history.html
@@ -88,6 +88,8 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
+
 
   <main>
     <!-- Hero -->
@@ -245,6 +247,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
