--- a/about-ideology.html
+++ b/about-ideology.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- 히어로 영역 -->
@@ -60,4 +61,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
