--- a/about-location.html
+++ b/about-location.html
@@ -50,6 +50,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- 히어로 영역 -->
@@ -105,6 +106,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
