--- a/about-partners.html
+++ b/about-partners.html
@@ -67,6 +67,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- 히어로 영역 -->
@@ -107,6 +108,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
