--- a/about-vision.html
+++ b/about-vision.html
@@ -28,6 +28,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
   <!-- 히어로 영역 -->
@@ -143,6 +144,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
