--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 <body class="subpage">
   <!-- 공통 헤더 -->
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
   <!-- 상단 히어로 (배경 + 흰 글씨) -->
@@ -68,6 +69,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
