--- a/news.html
+++ b/news.html
@@ -53,6 +53,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- Hero -->
@@ -99,6 +100,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
