--- a/product.html
+++ b/product.html
@@ -84,6 +84,7 @@
 </head>
 <body>
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- Hero -->
@@ -136,4 +137,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
