--- a/services.html
+++ b/services.html
@@ -55,6 +55,7 @@
 <body>
   <!-- 공통 헤더 -->
   <div id="site-header"></div>
+  <body class="has-hero">
 
   <main>
     <!-- 상단 Hero 영역 -->
@@ -99,3 +100,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
