--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 </p>
 
       </div>
-      <div><img src="/img/about-plant.png" alt="플랜트 설계 이미지"></div>
+      <div><img src="/img/about-plant.jpg" alt="플랜트 설계 이미지"></div>
     </section>
   </main>
 
@@ -69,6 +69,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
