--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
+  <meta property="og:description" content="㈜세찬기술은 플랜트 배관 설계 전문기업으로, 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
+  <meta property="og:url" content="https://www.sechantec.co.kr/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>㈜세찬기술 | 메인</title>
@@ -120,5 +125,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
