--- a/about.html
+++ b/about.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>회사소개 | ㈜세찬기술</title>
-  <meta name="description" content="㈜세찬기술은 플랜트 배관 설계 전문기업으로 고객과 함께 성장하는 비즈니스 파트너입니다." />
-  <link rel="canonical" href="https://www.sechantec.co.kr/about.html" />
+
+  <!-- 페이지 고유 타이틀/디스크립션 -->
+  <title>㈜세찬기술 | 메인</title>
+  <meta name="description" content="플랜트·배관 3D 설계 전문 회사, 세찬기술의 공식 웹사이트." />
+  <link rel="canonical" href="https://www.sechantec.co.kr/" />
   <meta name="robots" content="index,follow" />
-  <link rel="stylesheet" href="/assets/site.css" />
+
+  <!-- Open Graph (페이지별로 내용/URL 맞춤) -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
+  <meta property="og:description" content="반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+
+  <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
 </head>
 
   <!-- 공통 헤더 -->
@@ -69,6 +80,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
