--- a/about.html
+++ b/about.html
@@ -4,22 +4,33 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- 페이지 고유 타이틀/디스크립션 -->
-  <title>㈜세찬기술 | 메인</title>
-  <meta name="description" content="플랜트·배관 3D 설계 전문 회사, 세찬기술의 공식 웹사이트." />
-  <link rel="canonical" href="https://www.sechantec.co.kr/" />
+  <title>회사소개 | ㈜세찬기술</title>
+  <meta name="description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개. 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 파트너입니다." />
+  <link rel="canonical" href="https://www.sechantec.co.kr/about.html" />
   <meta name="robots" content="index,follow" />
 
-  <!-- Open Graph (페이지별로 내용/URL 맞춤) -->
+  <!-- Open Graph (네이버/카톡 미리보기 등) -->
   <meta property="og:site_name" content="㈜세찬기술" />
-  <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
-  <meta property="og:description" content="반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.sechantec.co.kr/" />
+  <meta property="og:title" content="회사소개 | ㈜세찬기술" />
+  <meta property="og:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개. 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 파트너입니다." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about.html" />
+  <!-- 1200x630 권장, 정적 파일 경로 유지 -->
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
 
+  <!-- Twitter 카드(선택) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="회사소개 | ㈜세찬기술" />
+  <meta name="twitter:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+
+  <!-- 파비콘(있으면) -->
+  <link rel="icon" href="/favicon.ico" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
 </head>
+
 
   <!-- 공통 헤더 -->
   <div id="site-header"></div>
@@ -80,6 +91,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
