--- a/news.html
+++ b/news.html
@@ -3,22 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- 페이지 고유 타이틀/디스크립션 -->
-  <title>㈜세찬기술 | 메인</title>
-  <meta name="description" content="플랜트·배관 3D 설계 전문 회사, 세찬기술의 공식 웹사이트." />
-  <link rel="canonical" href="https://www.sechantec.co.kr/" />
+  <title>공지 | ㈜세찬기술</title>
+  <meta name="description" content="세찬기술의 최신 공지 및 뉴스 소식을 확인하세요." />
+  <link rel="canonical" href="https://www.sechantec.co.kr/news.html" />
   <meta name="robots" content="index,follow" />
 
-  <!-- Open Graph (페이지별로 내용/URL 맞춤) -->
+  <!-- Open Graph -->
   <meta property="og:site_name" content="㈜세찬기술" />
-  <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
-  <meta property="og:description" content="반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.sechantec.co.kr/" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+  <meta property="og:title" content="공지 | ㈜세찬기술" />
+  <meta property="og:description" content="세찬기술의 최신 공지 및 뉴스 소식을 확인하세요." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/news.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-news.png" />
 
-  <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="공지 | ㈜세찬기술" />
+  <meta name="twitter:description" content="세찬기술의 최신 공지 및 뉴스 소식을 확인하세요." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-news.png" />
+
+  <link rel="stylesheet" href="/assets/site.css" />
+
   <style>
     /* 단일 컬럼 컨테이너 */
     .news-wrap{
@@ -111,6 +116,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
