--- a/services.html
+++ b/services.html
@@ -4,10 +4,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>서비스 | ㈜세찬기술</title>
-  <meta name="description" content="업무영역 소개" />
+  <meta name="description" content="세찬기술의 주요 업무영역과 엔지니어링 서비스를 소개합니다." />
   <link rel="canonical" href="https://www.sechantec.co.kr/services.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="서비스 | ㈜세찬기술" />
+  <meta property="og:description" content="세찬기술의 주요 업무영역과 엔지니어링 서비스를 소개합니다." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/services.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-service.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="서비스 | ㈜세찬기술" />
+  <meta name="twitter:description" content="세찬기술의 주요 업무영역과 엔지니어링 서비스를 소개합니다." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-service.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
+
   <style>
     /* 서비스 2×2 레이아웃 */
     .services-grid {
@@ -100,4 +116,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
