--- a/about-vision.html
+++ b/about-vision.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VISION | ㈜세찬기술</title>
-  <meta name="description" content="세찬기술 비전" />
+  <title>Vision | ㈜세찬기술</title>
+  <meta name="description" content="세찬기술의 비전과 미래 성장 전략." />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-vision.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="Vision | ㈜세찬기술" />
+  <meta property="og:description" content="세찬기술의 비전과 미래 성장 전략." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about-vision.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-vision.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Vision | ㈜세찬기술" />
+  <meta name="twitter:description" content="세찬기술의 비전과 미래 성장 전략." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-vision.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -144,6 +159,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
