--- a/about-partners.html
+++ b/about-partners.html
@@ -4,10 +4,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>파트너 | ㈜세찬기술</title>
-  <meta name="description" content="세찬기술 파트너" />
+  <meta name="description" content="세찬기술과 협력하는 주요 파트너사를 소개합니다." />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-partners.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="파트너 | ㈜세찬기술" />
+  <meta property="og:description" content="세찬기술과 협력하는 주요 파트너사를 소개합니다." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about-partners.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-partners.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="파트너 | ㈜세찬기술" />
+  <meta name="twitter:description" content="세찬기술과 협력하는 주요 파트너사를 소개합니다." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-partners.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
+
   <style>
     .partners-intro {
       text-align: center;
@@ -108,6 +124,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
