--- a/about-location.html
+++ b/about-location.html
@@ -3,11 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>오시는길 | ㈜세찬기술</title>
-  <meta name="description" content="㈜세찬기술 오시는길" />
+  <title>오시는 길 | ㈜세찬기술</title>
+  <meta name="description" content="㈜세찬기술 본사 주소 및 교통편 안내." />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-location.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="오시는 길 | ㈜세찬기술" />
+  <meta property="og:description" content="㈜세찬기술 본사 주소 및 교통편 안내." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about-location.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-location.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="오시는 길 | ㈜세찬기술" />
+  <meta name="twitter:description" content="㈜세찬기술 본사 주소 및 교통편 안내." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-location.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
+
   <style>
     .location-wrapper {
       max-width: var(--maxw);
@@ -106,6 +122,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
