--- a/about-ideology.html
+++ b/about-ideology.html
@@ -4,12 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>이념 | ㈜세찬기술</title>
-  <meta name="description" content="㈜세찬기술 경영이념" />
+  <meta name="description" content="세찬기술의 경영 이념과 핵심 가치를 소개합니다." />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-ideology.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="이념 | ㈜세찬기술" />
+  <meta property="og:description" content="세찬기술의 경영 이념과 핵심 가치를 소개합니다." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about-ideology.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-ideology.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="이념 | ㈜세찬기술" />
+  <meta name="twitter:description" content="세찬기술의 경영 이념과 핵심 가치를 소개합니다." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-ideology.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body>
   <div id="site-header"></div>
   <body class="has-hero">
@@ -61,5 +77,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
