--- a/about-history.html
+++ b/about-history.html
@@ -4,10 +4,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>연혁 | ㈜세찬기술</title>
-  <meta name="description" content="㈜세찬기술 회사연혁 및 프로젝트 발자취" />
+  <meta name="description" content="㈜세찬기술의 회사 연혁과 프로젝트 발자취." />
   <link rel="canonical" href="https://www.sechantec.co.kr/about-history.html" />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="㈜세찬기술" />
+  <meta property="og:title" content="연혁 | ㈜세찬기술" />
+  <meta property="og:description" content="㈜세찬기술의 회사 연혁과 프로젝트 발자취." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://www.sechantec.co.kr/about-history.html" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-history.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="연혁 | ㈜세찬기술" />
+  <meta name="twitter:description" content="㈜세찬기술의 회사 연혁과 프로젝트 발자취." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-history.png" />
+
   <link rel="stylesheet" href="/assets/site.css" />
+
   <style>
     /* ===== 회사 연혁(위 섹션) ===== */
     .history-wrap { max-width: 1000px; margin: 0 auto; padding: 28px var(--pad) 60px; }
@@ -247,6 +263,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
