--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph (페이지별로 내용/URL 맞춤) -->
   <meta property="og:site_name" content="㈜세찬기술" />
   <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
-  <meta property="og:description" content="반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
+  <meta property="og:description" content="바이오·석유화학·발전·반도체 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/" />
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
@@ -130,6 +130,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
